<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aclocationtrack.dashboard.profile.ProfileActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_1"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_2"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:nextFocusDown="@id/state"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_town"
                    android:inputType="text"
                    android:nextFocusDown="@id/state"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/statetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2ssp"
                android:text="State" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:paddingBottom="@dimen/_2sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp"
                android:nextFocusDown="@id/state"
                android:theme="@style/TextInputLineColor">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zipcode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:nextFocusDown="@id/state"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.v4.widget.NestedScrollView>