<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_32ssp"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView
        android:id="@+id/otpView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_16sdp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/otp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_40sdp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="Enter OTP"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/please"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:lineSpacingExtra="@dimen/_8sdp"
                android:text="Please wait...\nYou will receive OTP"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/gradient_round_btn_view"
                android:text="@string/otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_16sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="@dimen/_40sdp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:textSize="@dimen/_12ssp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/forgot_btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/gradient_round_btn_view"
                android:text="@string/forgot"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgot_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Back to Login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</RelativeLayout>